# erp.topqapi.az-api

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deployment.yml
config/: .env.example
docker/: docker-compose.dev.yml  docker-compose.prod.yml
docker/app/: Dockerfile
docker/app/production/: start.sh
media/: .gitignore
server/: conftest.py  urls.py
server/apps/account/: views.py
server/apps/account/logic/: serializers.py
server/apps/account/tests/: __init__.py  test_endpoints.py
server/apps/auth/: urls.py  views.py
server/apps/auth/logic/: serializers.py
server/apps/branch/: admin.py  apps.py  models.py  urls.py  views.py
server/apps/branch/logic/: fields.py  filters.py  querysets.py  schema.py  serializers.py
server/apps/branch/migrations/: 0001_initial.py  0002_alter_branch_options.py  0002_initial.py
server/apps/catalog/: admin.py  apps.py  models.py  urls.py  views.py
server/apps/catalog/logic/: filters.py  serializers.py
server/apps/catalog/migrations/: 0001_initial.py  0002_alter_productrecord_product_and_more.py
server/apps/category/: admin.py  models.py  views.py
server/apps/category/logic/: fields.py  filters.py  schema.py  serializers.py
server/apps/category/migrations/: 0001_initial.py
server/apps/core/: models.py
server/apps/core/logic/: pagination.py  permissions.py
server/apps/expense/: admin.py  apps.py  models.py  urls.py  views.py
server/apps/order/: admin.py  models.py  urls.py  views.py
server/apps/payment/: admin.py  apps.py  models.py  urls.py  views.py
server/apps/product/: admin.py  models.py  views.py
server/apps/staff/: admin.py  apps.py  models.py  urls.py  views.py
server/apps/supplier/: admin.py  apps.py  models.py  urls.py  views.py
server/apps/user/: admin.py  models.py
server/apps/warehouse/: admin.py  apps.py  models.py  urls.py  views.py
server/apps/worker/: admin.py  apps.py  models.py
server/settings/: __init__.py
server/settings/components/: backup.py  corsheaders.py  custom.py  database.py  default.py  email.py  files.py  health.py  i18n.py  logging.py  project.py  restframework.py
server/settings/environments/: dev.py  local.py  prod.py
(+96 files in other folders)
