[tool.poetry]
name = "erp.topqapi.az-api"
version = "0.1.0"
description = ""
authors = ["Tarlan Soltanov <tarlansoltanov@outlook.com>"]
readme = "README.md"
packages = [{ include = "server" }]

[tool.poetry.dependencies]
python = "^3.12"

psycopg2 = "^2.9.9"
colorlog = "^6.8.2"
gunicorn = "^23.0.0"
python-decouple = "^3.8"

django = "^5.1"
django-solo = "^2.3.0"
django-cleanup = "^8.1.0"
django-crontab = "^0.7.1"
django-dbbackup = "^4.2.1"
django-cors-headers = "^4.4.0"
django-health-check = "^3.18.3"
django-split-settings = "^1.3.2"
django-storages = { extras = ["boto3"], version = "^1.14.4" }

django-filter = "^24.3"
drf-spectacular = "^0.27.2"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
django-debug-toolbar = "^4.2.0"

[tool.black]
line-length = 119
target-version = ['py310']

[tool.isort]
py_version = 310
profile = "black"
line_length = 119
order_by_type = false

[tool.flake8]
max-line-length = 119
ignore = ["A003", "A005", "W503"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
